<resources>
    <string name="app_name">YouTube Audio</string>
    <string name="hint_youtube_url">Paste YouTube URL</string>
    <string name="fetch_video">Load Video</string>
    <string name="open_player">Open Player</string>
    <string name="save_to_playlist">Save to playlist</string>
    <string name="playlist">Playlist</string>
    <string name="input">Input</string>
    <string name="player">Player</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>
